Fix alignment issues in UI

--- a/frontend/ui/app/[locale]/home/(features)/FeatureBlock.module.css
+++ b/frontend/ui/app/[locale]/home/(features)/FeatureBlock.module.css
@@ -57,6 +57,18 @@
 }
 
 @media screen and (max-width: 1000px) {
+  .block {
+    flex-direction: column;
+  }
+
+  .block div {
+    text-align: center;
+  }
+
+  .block ul li p {
+    justify-content: center;
+  }
+
   .block h1 {
     font-size: var(--font-mobile-header);
   }
